--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
 <!DOCTYPE html>
 <html>
-<h1>Hello</h1>
+	<head>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
+		<script src="data.js"></script>
+		<style>
+			header{
+				background-color: blue;
+				height: 100px;
+				width: 100%;
+			}
+			#bottom{
+				height: calc(100% - 100px);
+				background-color: yellow;
+			}	
+			</style>
+
+			<script>
+				$(document).ready(function(){
+
+				});
+			</script>
+	</head>
+
+	<body>		
+		<h1>Hello</h1>
+	</body>
 </html>
