--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 			#bottom{
 				height: calc(100% - 100px);
 				background-color: yellow;
+			}
+			div{
+				background-color: red;
 			}	
 			</style>
 
@@ -23,7 +26,15 @@
 			</script>
 	</head>
 
-	<body>		
-		<h1>Hello</h1>
+	<body>	
+		<header>
+		</header>
+		<div class="bottom">
+			<div id="left">
+				LEFT
+			</div>
+			<div id="right">
+				RIGHT
+			</div>
 	</body>
 </html>
