--- a/index.html
+++ b/index.html
@@ -6,35 +6,31 @@
 		<script src="data.js"></script>
 		<style>
 			header{
-				background-color: blue;
-				height: 100px;
-				width: 100%;
+				}
+			ul{
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
 			}
-			#bottom{
-				height: calc(100% - 100px);
-				background-color: yellow;
-			}
-			div{
-				background-color: red;
-			}	
-			</style>
+				
 
-			<script>
-				$(document).ready(function(){
+		</style>
 
-				});
-			</script>
+		<script>
+			$(document).ready(function(){
+
+			});
+		</script>
 	</head>
 
 	<body>	
 		<header>
 		</header>
-		<div class="bottom">
-			<div id="left">
-				LEFT
-			</div>
-			<div id="right">
-				RIGHT
-			</div>
+		<ul>
+		  <li><a href="default.asp">Home</a></li>
+		  <li><a href="news.asp">News</a></li>
+		  <li><a href="contact.asp">Contact</a></li>
+		  <li><a href="about.asp">About</a></li>
+		</ul>
 	</body>
 </html>
