--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 				}
 			ul{
 				list-style-type: none;
+				display: inline;
+				float: center;
 				margin: 0;
 				padding: 0;
 			}
@@ -27,10 +29,10 @@
 		<header>
 		</header>
 		<ul>
-		  <li><a href="default.asp">Home</a></li>
-		  <li><a href="news.asp">News</a></li>
-		  <li><a href="contact.asp">Contact</a></li>
-		  <li><a href="about.asp">About</a></li>
+		  <li><a href="aboutme.asp">About Me</a></li>
+		  <li><a href="experience.asp">Experience</a></li>
+		  <li><a href="skills.asp">Skills</a></li>
+		  <li><a href="contactme.asp">Contact Me</a></li>
 		</ul>
 	</body>
 </html>
