--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 			header{
 				}
 			ul{
-				display: inline;
+				list-style-type: none;
 				float: center;
 				margin: 0;
 				padding: 0;
+			}
+			li{
+				display: inline;
 			}
 				
 
