--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
 			li{
 				display: inline;
 			}
+			#nav {
+			    width: 100%;
+			    float: left;
+			    margin: 0 0 3em 0;
+			    padding: 0;
+			    list-style: none;
+			    background-color: #f2f2f2;
+			    border-bottom: 1px solid #ccc; 
+			    border-top: 1px solid #ccc; }
+			#nav li {
+			    float: left; }
+			#nav li a {
+			    display: block;
+			    padding: 8px 15px;
+			    text-decoration: none;
+			    font-weight: bold;
+			    color: #069;
+			    border-right: 1px solid #ccc; }
+			#nav li a:hover {
+			    color: #c00;
+			    background-color: #fff; }
 				
 
 		</style>
@@ -29,11 +50,11 @@
 	<body>	
 		<header>
 		</header>
-		<ul>
-		  <li><a href="aboutme.asp">About Me</a></li>
-		  <li><a href="experience.asp">Experience</a></li>
-		  <li><a href="skills.asp">Skills</a></li>
-		  <li><a href="contactme.asp">Contact Me</a></li>
-		</ul>
+			<ul id="nav">
+			  <li><a href="aboutme.asp">About Me</a></li>
+			  <li><a href="experience.asp">Experience</a></li>
+			  <li><a href="skills.asp">Skills</a></li>
+			  <li><a href="contactme.asp">Contact Me</a></li>
+			</ul>
 	</body>
 </html>
