--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<script src="data.js"></script>
 		<style>
 			header{
+				height: 100%;
+				width: 100%;
+				background-color: #555;
 				}
 			ul{
 				list-style-type: none;
@@ -25,7 +28,7 @@
 			    border-bottom: 1px solid #ccc; 
 			    border-top: 1px solid #ccc; }
 			#nav li {
-			    float: left; }
+			    float: center; }
 			#nav li a {
 			    display: block;
 			    padding: 8px 15px;
