--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			header{
 				height: 100%;
 				width: 100%;
-				background-color: #555;
+				background-color: blue;
 				}
 			ul{
 				list-style-type: none;
@@ -28,7 +28,7 @@
 			    border-bottom: 1px solid #ccc; 
 			    border-top: 1px solid #ccc; }
 			#nav li {
-			    float: center; }
+			    float: right; }
 			#nav li a {
 			    display: block;
 			    padding: 8px 15px;
