--- a/index.html
+++ b/index.html
@@ -10,25 +10,15 @@
 				width: 100%;
 				background-color: blue;
 				}
-			ul{
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-			}
-			li{
-				display: inline;
-			}
 			#nav {
 			    width: 100%;
-			    float: left;
+			    text-align: center;
 			    margin: 0 0 3em 0;
 			    padding: 0;
 			    list-style: none;
 			    background-color: #f2f2f2;
 			    border-bottom: 1px solid #ccc; 
 			    border-top: 1px solid #ccc; }
-			#nav li {
-			    float: right; }
 			#nav li a {
 			    display: block;
 			    padding: 8px 15px;
