--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
 		<script src="data.js"></script>
 		<style>
-			header{
+			body{
 				height: 100%;
 				width: 100%;
 				background-color: blue;
 				}
 			#nav {
 			    width: 100%;
+			    float: left;
 			    text-align: center;
 			    margin: 0 0 3em 0;
 			    padding: 0;
