--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 				}
 			#nav {
 			    width: 100%;
-			    float: left;
 			    text-align: center;
 			    margin: 0 0 3em 0;
 			    padding: 0;
@@ -24,6 +23,7 @@
 			    display: block;
 			    padding: 8px 15px;
 			    text-decoration: none;
+			    text-align: center;
 			    font-weight: bold;
 			    color: #069;
 			    border-right: 1px solid #ccc; }
