--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 			body{
 				height: 100%;
 				width: 100%;
-				background-color: blue;
+				background-color: #808080;
 				}
 			#nav {
 			    width: 100%;
 			    text-align: center;
-			    margin: 0 0 3em 0;
+			    margin: 0 0 0 0;
 			    padding: 0;
 			    list-style: none;
 			    background-color: #f2f2f2;
@@ -28,8 +28,8 @@
 			    color: #069;
 			    border-right: 1px solid #ccc; }
 			#nav li a:hover {
-			    color: #c00;
-			    background-color: #fff; }
+			    color: #00FF00;
+			    background-color: #000000; }
 				
 
 		</style>
