--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
 			    background-color: #f2f2f2;
 			    border-bottom: 1px solid #ccc; 
 			    border-top: 1px solid #ccc; }
+			#nav li {
+				width: 100%;
+				display: inline;
+			}
 			#nav li a {
-			    display: block;
+			    display: inline-block;
 			    padding: 8px 15px;
 			    text-decoration: none;
 			    text-align: center;
 			    font-weight: bold;
-			    color: #069;
+			    color: #404040;
 			    border-right: 1px solid #ccc; }
 			#nav li a:hover {
 			    color: #00FF00;
