--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 			#nav {
 			    width: 100%;
 			    text-align: center;
-			    margin: 0 0 0 0;
+			    margin: -10px 0 0 -10px;
 			    padding: 0;
 			    list-style: none;
 			    background-color: #f2f2f2;
 			    border-bottom: 1px solid #ccc; 
 			    border-top: 1px solid #ccc; }
 			#nav li {
-				width: 100%;
 				display: inline;
 			}
 			#nav li a {
@@ -32,8 +31,8 @@
 			    color: #404040;
 			    border-right: 1px solid #ccc; }
 			#nav li a:hover {
-			    color: #00FF00;
-			    background-color: #202020; }
+			    color: #808080;
+			    background-color: #505050; }
 				
 
 		</style>
