--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 			    border-right: 1px solid #ccc; }
 			#nav li a:hover {
 			    color: #808080;
-			    background-color: #505050; }
+			    background-color: #505050;
+			    padding color: blue;
+			    }
 				
 
 		</style>
