--- a/index.html
+++ b/index.html
@@ -1,49 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
-		<script src="data.js"></script>
-		<style>
-			body{
-				height: 100%;
-				width: 100%;
-				background-color: #808080;
-				}
-			#nav {
-			    width: 100%;
-			    text-align: center;
-			    margin: -10px 0 0 -10px;
-			    padding: 0;
-			    list-style: none;
-			    background-color: #f2f2f2;
-			    border-bottom: 1px solid #ccc; 
-			    border-top: 1px solid #ccc; }
-			#nav li {
-				display: inline;
-			}
-			#nav li a {
-			    display: inline-block;
-			    padding: 8px 15px;
-			    text-decoration: none;
-			    text-align: center;
-			    font-weight: bold;
-			    color: #404040;
-			    border-right: 1px solid #ccc; }
-			#nav li a:hover {
-			    color: #808080;
-			    background-color: #505050;
-			    padding color: blue;
-			    }
-				
-
-		</style>
-
-		<script>
-			$(document).ready(function(){
-
-			});
-		</script>
+		<link type="text/css" rel="stylesheet" href="index.css"/>
+		<link type="text/javascript" rel="javascript" href="index.js"/>
 	</head>
 
 	<body>	
